src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_for_Mail_Merge__c</fullName>
        <label>Address for Mail Merge</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_EOY__c</fullName>
        <formula>((DATE((YEAR(TODAY())),12,31))-(Birthdate))/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age EOY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Today__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Next_Bday__c</fullName>
        <formula>IF( (DAY(TODAY())+100*MONTH(TODAY()))&lt;(DAY(Birthdate)+100*MONTH(Birthdate)) , (YEAR(TODAY())-YEAR(Birthdate)) , (YEAR(TODAY())-YEAR(Birthdate)+1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Next Bday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Beverage_Preference__c</fullName>
        <label>Beverage Preference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birthday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday_This_Year__c</fullName>
        <formula>DATE(YEAR(DATEVALUE(NOW())),MONTH( Birthdate), DAY( Birthdate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthplace__c</fullName>
        <label>Birthplace</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Role__c</fullName>
        <inlineHelpText>This is used for integration with FP &amp; PMS tools.</inlineHelpText>
        <label>Client Role</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Photo_ID__c</fullName>
        <inlineHelpText>Input the ID of the Image ID of the Photo that was uploaded to the Salesforce Documents/Image folder.</inlineHelpText>
        <label>Contact Photo ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Contact_Photo_ID__c, &quot;contact photo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact is a core contact of their entity.  An entity MAY have multiple core contacts.  E.g. for a client, the husband and wife could both be core contacts.  For a CPA firm, the principals would be core, but the employees might not.</inlineHelpText>
        <label>Core Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Turns_70_5__c</fullName>
        <formula>Birthdate + (70.5 * 365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for determining the RMD Deadline for the first year the contact takes RMD.</inlineHelpText>
        <label>Date Turns 70.5</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Spent_in_US__c</fullName>
        <label>Days Spent in US</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_By__c</fullName>
        <label>Do Not Contact By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Expiration_Date__c</fullName>
        <label>Drivers License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Issue_Date__c</fullName>
        <label>Drivers License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <label>Drivers License</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Type__c</fullName>
        <label>Email 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3_Type__c</fullName>
        <label>Email 3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financially Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_is_Active__c</fullName>
        <formula>IF(TEXT(Account.Active_Status__c) = &quot;Active&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field looks to the Contact&apos;s Entity and determines if the Entity record is Active or not.</inlineHelpText>
        <label>Entity is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Name__c</fullName>
        <inlineHelpText>Enter the name as it would appear on an envelope addressed to this contact. 
Example: Mr. Robert Smith</inlineHelpText>
        <label>Envelope Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Preference__c</fullName>
        <inlineHelpText>I.e. Italian, or a restaurant.</inlineHelpText>
        <label>Food Preference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Address_Formatted__c</fullName>
        <formula>IF(Fourth_C_O__c &lt;&gt; NULL, Fourth_C_O__c &amp; BR(), &quot;&quot;) &amp; Fourth_Street__c &amp; BR() &amp; IF(Fourth_Street_2__c &lt;&gt; NULL, Fourth_Street_2__c &amp; BR(), &quot;&quot;) &amp; Fourth_City__c &amp; &quot;, &quot; &amp; Fourth_State__c &amp; &quot; &quot; &amp; Fourth_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fourth Address Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Fourth C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_City__c</fullName>
        <label>Fourth City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Country__c</fullName>
        <label>Fourth Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Mailing_Notes__c</fullName>
        <label>Fourth Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_State__c</fullName>
        <label>Fourth State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Street_2__c</fullName>
        <label>Fourth Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Street__c</fullName>
        <label>Fourth Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Type__c</fullName>
        <label>Fourth Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fourth_Zip__c</fullName>
        <label>Fourth Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Info__c</fullName>
        <label>Health Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveling</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the contact is no longer active.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Sourced_from_US__c</fullName>
        <label>Income Sourced from US</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Informal_Name__c</fullName>
        <inlineHelpText>Enter name as contact would be addressed in casual communication (i.e. nickname or go-by name).
Example: Bob</inlineHelpText>
        <label>Informal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_State__c</fullName>
        <label>License State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Updates_Method__c</fullName>
        <label>Manager Updates Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surviving Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merge_Address__c</fullName>
        <formula>CASE(Address_for_Mail_Merge__c, &quot;Primary&quot;, Primary_Address_Formatted__c, &quot;Secondary&quot;, Secondary_Address_Formatted__c , &quot;Third&quot;, Third_Address_Formatted__c, &quot;Fourth&quot;, Fourth_Address_Formatted__c, Primary_Address_Formatted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_C_O__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;,  Primary_C_O__c, &quot;Secondary&quot;, Secondary_C_O__c, &quot;Third&quot;, Third_C_O__c, &quot;Fourth&quot;,  Fourth_C_O__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge C/O</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_City__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_City__c , &quot;Secondary&quot;, Secondary_City__c , &quot;Third&quot;, Third_City__c , &quot;Fourth&quot;, Fourth_City__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Country__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Country__c , &quot;Secondary&quot;, Secondary_Country__c , &quot;Third&quot;, Third_Country__c , &quot;Fourth&quot;, Fourth_Country__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_State__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_State__c , &quot;Secondary&quot;, Secondary_State__c , &quot;Third&quot;, Third_State__c , &quot;Fourth&quot;, Fourth_State__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Street_2__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Street_2__c , &quot;Secondary&quot;, Secondary_Street_2__c , &quot;Third&quot;, Third_Street_2__c , &quot;Fourth&quot;, Fourth_Street_2__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Street__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Street__c , &quot;Secondary&quot;, Secondary_Street__c , &quot;Third&quot;, Third_Street__c , &quot;Fourth&quot;, Fourth_Street__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Zip__c</fullName>
        <formula>Case( Address_for_Mail_Merge__c , &quot;Primary&quot;, Primary_Zip__c , &quot;Secondary&quot;, Secondary_Zip__c , &quot;Third&quot;, Third_Zip__c , &quot;Fourth&quot;, Fourth_Zip__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Issues__c</fullName>
        <label>New Issues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Newsletter_Method__c</fullName>
        <label>Newsletter Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Change_Birthdate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Changing the birthdate on a contact may impact RMD for this contact.  You must check this box to acknowledge the change.</inlineHelpText>
        <label>OK to Change Birthdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_2_Type__c</fullName>
        <label>Other Phone 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Phone_2__c</fullName>
        <label>Other Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Type__c</fullName>
        <label>Other Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date__c</fullName>
        <label>Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Issue_Date__c</fullName>
        <label>Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <label>Passport #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Reports_Method__c</fullName>
        <label>Performance Reports Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Formatted__c</fullName>
        <formula>IF(Primary_C_O__c &lt;&gt; NULL, Primary_C_O__c &amp; BR(), &quot;&quot;) &amp; Primary_Street__c &amp; BR() &amp; IF(Primary_Street_2__c &lt;&gt; NULL, Primary_Street_2__c &amp; BR(), &quot;&quot;) &amp; Primary_City__c &amp; &quot;, &quot; &amp; Primary_State__c &amp; &quot; &quot; &amp; Primary_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Primary C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <label>Primary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact is the primary point of contact for their entity. 

Only ONE primary contact is allowed per entity.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Notes__c</fullName>
        <label>Primary Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <label>Primary State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street_2__c</fullName>
        <label>Primary Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street__c</fullName>
        <label>Primary Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Zip__c</fullName>
        <label>Primary Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_to_Entity__c</fullName>
        <label>Relation to Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granddaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor/Trustor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Protector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Husband</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Contact Role</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>